--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
     <script language="javascript" type="text/javascript" src="init.js"></script>
-    <script type="text/javascript" src="amazon.js"></script>
+    <script type="text/javascript" src="pieces.js"></script>
     <script language="javascript" type="text/javascript" src="board.js"></script>
 </head>
 
