game stops when theres a winner, 6x6 and 10x10 board available, deleting useless comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <form action="#" id="dimform">
+
+    </form>
+
     <div id="main">
         <h2> Game of the Amazons </h2>
         <div id="canvas"></div>
