--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-    <script language="javascript" src="libraries/p5.dom.js"></script>
-    <script language="javascript" src="libraries/p5.sound.js"></script>
-    <script language="javascript" type="text/javascript" src="init.js"></script>
-    <script type="text/javascript" src="pieces.js"></script>
-    <script language="javascript" type="text/javascript" src="board.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
 
-<body>
-    <form action="#" id="dimform">
+        <script language="javascript" type="text/javascript" src="init.js"></script>
+        <script language="javascript" type="text/javascript" src="pieces.js"></script>
+        <script language="javascript" type="text/javascript" src="board.js"></script>
+    </head>
 
-    </form>
+    <body>
+        <h1> Game of the Amazons </h1>
 
-    <div id="main">
-        <h2> Game of the Amazons </h2>
-        <div id="canvas"></div>
-    </div>
+        <form id="dimform">
+        </form>
 
+        <div id="canvas" />
+    </body>
 
-    <script type="text/javascript">
-        //center the canvas
-        var tempString = ""+((window.innerWidth*0.9- 826 - window.innerWidth*0.9*0.08 )/2)+ "px";
-        document.getElementById("main").style.marginLeft = tempString;
-
-        window.onresize = function(event) {
-            var tempString = ""+((window.innerWidth*0.9- 826 - window.innerWidth*0.9*0.08 )/2)+ "px";
-            document.getElementById("main").style.marginLeft = tempString;
-        };
-    </script>
-</body>
+    <style>
+        body {
+            text-align: center;
+            padding: 2rem;
+        }
+        
+        #canvas {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </html>
